# purview-governance

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-functions.yml
collector/: __init__.py  auth.py  cli.py  compliance_client.py  config.py  payload.py  purview_client.py  requirements.txt  submit.py
docs/: api-schema.md  architecture.md  deployment-guide.md  onboarding-guide.md  sample-executive-summary.md  sample-payload.json  security-justification.md
functions/: function_app.py  local.settings.json.example  requirements.txt
functions/shared/: __init__.py  ai_agent.py  config.py  normalizer.py  report_generator.py  table_client.py  validation.py
grafana/dashboards/: purview-governance.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: azure-table.yml
infra/: azuredeploy.json  azuredeploy.parameters.json  main.bicep
infra/modules/: function-app.bicep  grafana.bicep  keyvault.bicep  monitoring.bicep  networking.bicep  openai.bicep  storage.bicep
infra/parameters/: dev.bicepparam  prod.bicepparam
onboarding/: README.md  consent_url_generator.py
tests/: conftest.py
tests/test_collector/: test_payload.py
tests/test_functions/: test_normalizer.py  test_validation.py
tests/test_integration/: conftest.py  test_aggregate_pipeline.py  test_ingest_pipeline.py
